--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -95,12 +95,12 @@ spec:
           - containerPort: 8480
             name: http
           volumeMounts:
-            # Mount the volume on the parent dir of the expected location
-            # /hadoop/dfs/journal so that the journal subdir would be a brand
-            # new empty dir. This way, we won't get affected by existing files
-            # in the volume.
+            # Mount a subpath of the volume so that the journal subdir would be
+            # a brand new empty dir. This way, we won't get affected by
+            # existing files in the volume top dir.
             - name: editdir
-              mountPath: /hadoop/dfs
+              mountPath: /hadoop/dfs/journal
+              subPath: journal
             - name: hdfs-config
               mountPath: /etc/hadoop-custom-conf
               readOnly: true
