Mount name subdir in journalnodes just in case

--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -101,6 +101,9 @@ spec:
             - name: editdir
               mountPath: /hadoop/dfs/journal
               subPath: journal
+            - name: editdir
+              mountPath: /hadoop/dfs/name
+              subPath: name
             - name: hdfs-config
               mountPath: /etc/hadoop-custom-conf
               readOnly: true
