--- a/charts/hdfs-k8s/values.yaml
+++ b/charts/hdfs-k8s/values.yaml
@@ -1,5 +1,5 @@
 ## ------------------------------------------------------------------------------
-## Zookeeper:
+## zookeeper:
 ## ------------------------------------------------------------------------------
 zookeeper:
   ## Configure Zookeeper resource requests and limits
@@ -13,7 +13,155 @@ zookeeper:
   ## The number of zookeeper server to have in the quorum.
   replicaCount: 3
 
+## ------------------------------------------------------------------------------
+## hdfs-config-k8s:
+## ------------------------------------------------------------------------------
+hdfs-config-k8s:
+  ## Custom hadoop config keys passed to the hdfs configmap as extra keys.
+  customHadoopConfig:
+     coreSite: {}
+      ## Set config key and value pairs, e.g.
+      # hadoop.http.authentication.type: kerberos
 
+     hdfsSite: {}
+      ## Set config key and value pairs, e.g.
+      # dfs.datanode.use.datanode.hostname: "false"
+
+## ------------------------------------------------------------------------------
+## hdfs-journalnode-k8s:
+## ------------------------------------------------------------------------------
+hdfs-journalnode-k8s:
+  persistence:
+    ## Persistent Volume Storage Class
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    # storageClass: "-"
+    ## To choose a suitable persistent volume from available static volumes, selectors
+    ## are used.
+    # selector:
+    #   matchLabels:
+    #     volume-type: hdfs-ssd
+    accessMode: ReadWriteOnce
+    size: 20Gi
+
+  ## Node labels and tolerations for pod assignment
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+## ------------------------------------------------------------------------------
+## hdfs-namenode-k8s:
+## ------------------------------------------------------------------------------
+hdfs-namenode-k8s:
+  ## Name of the namenode start script in the config map.
+  namenodeStartScript: format-and-run.sh
+
+  ## A namenode start script that can have user specified content.
+  ## Can be used to conduct ad-hoc operation as specified by a user.
+  ## To use this, also set the namenodeStartScript variable above
+  ## to custom-run.sh.
+  customRunScript: |
+    #!/bin/bash -x
+    echo Write your own script content!
+    echo This message will disappear in 10 seconds.
+    sleep 10
+
+  persistence:
+    ## Persistent Volume Storage Class
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    # storageClass: "-"
+
+    ## To choose a suitable persistent volume from available static volumes, selectors
+    ## are used.
+    # selector:
+    #   matchLabels:
+    #     volume-type: hdfs-ssd
+
+    accessMode: ReadWriteOnce
+
+    size: 100Gi
+
+  ## Whether or not to use hostNetwork in namenode pods. Disabling this will break
+  ## data locality as namenode will see pod virtual IPs and fails to equate them with
+  ## cluster node physical IPs associated with data nodes.
+  ## We currently disable this only for CI on minikube.
+  hostNetworkEnabled: true
+
+  ## Node labels and tolerations for pod assignment
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+## ------------------------------------------------------------------------------
+## hdfs-simple-namenode-k8s:
+## ------------------------------------------------------------------------------
+hdfs-simple-namenode-k8s:
+  ## Path of the local disk directory on a cluster node that will contain the namenode
+  ## fsimage and edit logs. This will be mounted to the namenode as a k8s HostPath
+  ## volume.
+  nameNodeHostPath: /hdfs-name
+
+  ## Node labels and tolerations for pod assignment
+  nodeSelector: {}
+  tolerations: []
+  affinity: {}
+
+## ------------------------------------------------------------------------------
+## hdfs-datanode-k8s:
+## ------------------------------------------------------------------------------
+hdfs-datanode-k8s: {}
+
+## ------------------------------------------------------------------------------
+## hdfs-krb5-k8s:
+## ------------------------------------------------------------------------------
+hdfs-krb5-k8s:
+  persistence:
+    ## Persistent Volume Storage Class
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    # storageClass: "-"
+
+    ## To choose a suitable persistent volume from available static volumes, selectors
+    ## are used.
+    # selector:
+    #   matchLabels:
+    #     volume-type: hdfs-ssd
+
+    accessMode: ReadWriteOnce
+
+    size: 20Gi
+
+  ## We use a 3rd party image built from https://github.com/gcavalcante8808/docker-krb5-server.
+  ## TODO: The pod currently prints out the admin account in plain text.
+  ## Supply an admin account password using a k8s secret.
+  ## TODO: The auto-generated passwords might be weak due to low entropy.
+  ## Increase entropy by running rngd or haveged.
+  ## TODO: Using latest tag is not desirable. The current image does not have specific tags.
+  ## Find a way to fix it.
+  image:
+    repository: gcavalcante8808/krb5-server
+
+    tag: latest
+
+    pullPolicy: IfNotPresent
+
+  service:
+    type: ClusterIP
+
+    port: 88
 ## ------------------------------------------------------------------------------
 ## Global values affecting all sub-charts:
 ## ------------------------------------------------------------------------------
