--- a/charts/hdfs-simple-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-simple-namenode-k8s/templates/namenode-statefulset.yaml
@@ -26,6 +26,10 @@ spec:
     metadata:
       labels:
         app: hdfs-namenode
+      annotations:
+      {{- if .Values.annotations }}
+{{ toYaml .Values.annotations | indent 8 }}
+      {{- end }}
     spec:
       {{- if .Values.affinity }}
       affinity:
