--- a/charts/hdfs-client-k8s/templates/client-deployment.yaml
+++ b/charts/hdfs-client-k8s/templates/client-deployment.yaml
@@ -18,6 +18,10 @@ spec:
       labels:
         app: {{ template "hdfs-k8s.client.name" . }}
         release: {{ .Release.Name }}
+      {{- if .Values.podAnnotations }}
+      annotations:
+{{ toYaml .Values.podAnnotations | indent 8 }}
+      {{- end }}
     spec:
       containers:
         - name: hdfs-client
