--- a/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
+++ b/charts/hdfs-journalnode-k8s/templates/journalnode-statefulset.yaml
@@ -53,6 +53,10 @@ spec:
       labels:
         app: {{ template "hdfs-k8s.journalnode.name" . }}
         release: {{ .Release.Name }}
+      {{- if .Values.podAnnotations }}
+      annotations:
+{{ toYaml .Values.podAnnotations | indent 8 }}
+      {{- end }}
     spec:
       {{- if .Values.affinity }}
       affinity:
