--- a/charts/hdfs-krb5-k8s/templates/statefulset.yaml
+++ b/charts/hdfs-krb5-k8s/templates/statefulset.yaml
@@ -44,6 +44,10 @@ spec:
       labels:
         app: {{ template "hdfs-k8s.krb5.name" . }}
         release: {{ .Release.Name }}
+      {{- if .Values.podAnnotations }}
+      annotations:
+{{ toYaml .Values.podAnnotations | indent 8 }}
+      {{- end }}
     spec:
       containers:
         - name: {{ .Chart.Name }}
