Add resource limits/requests to helm charts

--- a/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
+++ b/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
@@ -108,6 +108,8 @@ spec:
             periodSeconds: 30
           securityContext:
             privileged: true
+          resources:
+{{ toYaml .Values.resources | indent 12 }} 
           volumeMounts:
             - name: dn-scripts
               mountPath: /dn-scripts
