Add the possibility to set env variables

--- a/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
+++ b/charts/hdfs-datanode-k8s/templates/datanode-daemonset.yaml
@@ -94,6 +94,9 @@ spec:
             - name: JSVC_HOME
               value: /jsvc-home
             {{- end }}
+{{- if .Values.env }}
+{{ toYaml .Values.env | indent 12 }}
+{{- end }}            
           livenessProbe:
             exec:
               command:
