--- a/charts/hdfs-k8s/values.yaml
+++ b/charts/hdfs-k8s/values.yaml
@@ -123,6 +123,25 @@ hdfs-datanode-k8s:
   nodeSelector: {}
   tolerations: []
   affinity: {}
+  persistence:
+    enabled: false
+    replicas: 2
+    accessMode: ReadWriteOnce
+    size: 100Gi
+    ## Persistent Volume Storage Class
+    ## If defined, storageClassName: <storageClass>
+    ## If set to "-", storageClassName: "", which disables dynamic provisioning
+    ## If undefined (the default) or set to null, no storageClassName spec is
+    ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
+    ##   GKE, AWS & OpenStack)
+    ##
+    # storageClass: "-"
+
+    ## To choose a suitable persistent volume from available static volumes, selectors
+    ## are used.
+    # selector:
+    #   matchLabels:
+    #     volume-type: hdfs-ssd
 
 ## ------------------------------------------------------------------------------
 ## hdfs-krb5-k8s:
